# ParallelComputing_CW

./: CMakeLists.txt  README.md  test.py
ParallelComputing_CW/: CMakeLists.txt
ParallelComputing_CW/src/: main.cpp
ParallelComputing_CW/src/core/: IndexBuilder.cpp  IndexBuilder.h  InvertedIndex.cpp  InvertedIndex.h  ThreadPool.cpp  ThreadPool.h  Tokenizer.cpp  Tokenizer.h
ParallelComputing_CW/src/server/: Protocol.cpp  Protocol.h  Server.cpp  Server.h
ParallelComputing_CW/src/utils/: FileReader.cpp  FileReader.h
cpp_client/: CMakeLists.txt  main.cpp
include/core/: InvertedIndex.h  ThreadPool.h
python_client/: main.py
src/core/: ThreadPool.cpp
